Pulsating Play Buttom

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <div class="services container">
         <div class="top">
           <h2 class="subheading centered">Decentralized Services</h2>
-          <p>Our one-stop shop offers a wide selection of cryptocurrencies, GiftCards like Apple iTunes, Google Play, Nordstorm, Steam, Sephora, Amazon, Walmart, Visa, American Express and more and of course amazing discounted deals on utility bill transactions.</p>
+          <p>Our one-stop shop offers a wide selection of Cryptocurrencies, GiftCards like Apple iTunes, Google Play, Nordstorm, Steam, Sephora, Amazon, Walmart, Visa, American Express and more. Also of course, amazing discounted deals on utility bill transactions.</p>
         </div>
         <div class="bottom">
           <div class="service-box flx">
@@ -278,9 +278,9 @@
          <img src="./imgz/bg/Refd.png" alt="" class="img0"> 
         </div>
         <div class="contentBx">
-          <h1 class="subheading">Earn as Influencer</h1>
+          <h1 class="subheading">Earn Commissions</h1>
           <p>
-            Our trading ecosystem offers you partnership as a stakeholder to earn from commissions and referrals. Get 25% in affiliate fees instantly for qualifying trades and purchases. Our competitive conversion rates help you maximize earnings.
+            Our trading ecosystem offers you partnership as a stakeholder to earn from referrals and commissions. Get 25% in affiliate fees instantly for qualifying trades and purchases. Our competitive conversion rates help you maximize earnings.
           </p>
 
         </div>
@@ -373,7 +373,7 @@
           <a href="https://wa.link/y9p2cb" target="_blank">Trade</a> 
           <a href="">Features</a> 
           <a href="#refer">Get commission</a> 
-          <a href="#futures">Check current rates</a> 
+          <a href="#futures">Check market rates</a> 
           </div>
         </div>
         <div class="col3">
