--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
               <h1>Trusted Platform <br> for <span class="flag"> trading <span class="txt-type" data-wait="3000" data-words='["Crypto", "GiftCards", "NFTs"]'></span> </span></h1>
             </div>
             <p>
-              Explore the Crypto World. Buy and sell bitcoin for fiat (or other cryptocurrencies) privately and securely using Wisymore's peer-to-peer exchange network. No registration required. <br>
-               <!-- Wisymore Exchange is active and buying all your crypto assets as well as all your giftcards at the best rates. Trade now to enjoy the fast payment service. -->
+              Explore the Crypto World. Buy and sell bitcoin for fiat (or other cryptocurrencies) privately and securely using Wisymore's peer-to-peer exchange network. No registration required. <br> 
             </p>
             <a href="https://wa.link/y9p2cb" target="_blank" class="cta">Trade Now</a>
             <a href="#refer" class="cta unbg">Earn Reward</a>
@@ -278,7 +277,9 @@
          <img src="./imgz/bg/Refd.png" alt="" class="img0"> 
         </div>
         <div class="contentBx">
-          <h1 class="subheading">Earn Commissions</h1>
+          <h1 class="subheading">
+            <!-- <img src="./imgz/icons/financial-profit.png" alt=""> -->
+            Earn Commissions</h1>
           <p>
             Our trading ecosystem offers you partnership as a stakeholder to earn from referrals and commissions. Get 25% in affiliate fees instantly for qualifying trades and purchases. Our competitive conversion rates help you maximize earnings.
           </p>
